# Awesome-DCIST-T4

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  fusion_config.yaml
.github/workflows/: build_and_test.yaml  ci-action-selfhost.yaml  ci-action.yaml  lint-action.yaml
dcist_launch_system/: package.xml  pyproject.toml  setup.cfg  setup.py
dcist_launch_system/config/: rviz_topics.yaml  zenoh_router_template.json5
dcist_launch_system/config_generation/: experiment_manifest.yaml  generate_configs.py
dcist_launch_system/docs/: fleet-adt4-user-guide.md  fleet-adt4.md
dcist_launch_system/eval/: kimera_multi_gt.yaml  kimera_multi_locus.yaml
dcist_launch_system/labelspaces/: instance_seg.yaml
dcist_launch_system/launch/: master.launch.yaml
dcist_launch_system/nodes/: example_1_node.py
dcist_launch_system_msgs/: CMakeLists.txt  package.xml
doc/: iser.md
docker/: .env.example  .env_example  Dockerfile  Makefile  README.md  base-nogpu.Dockerfile  base.Dockerfile  build_adt4_docker.sh  deploy.Dockerfile  dev.Dockerfile  docker-compose.deploy.yml  docker-compose.yml  entrypoint.sh  prepare_src.sh
dotfiles/: adt4rc  pyshortcuts.py
install/: config_requirements.txt  download_weights.py  packages.yaml  python_setup.bash  python_setup.sh  requirements.txt  roman_requirements.txt  spark_requirements.txt
integration_tests/: console_only_test.py  detached_test_runner.sh  integration_test_config.yaml  prior_dsg_integration_test.py  pytest.ini  test_adt4_suite.py  tmux_diagnostic.py
network_diagnostics/: README.md
rsm_dcist/: package.xml  setup.cfg  setup.py
scripts/: generate_ground_truth_pose.py  improved_record_picking_data.bash  network_monitor.py  record_picking_data.bash  record_spot_calibration.bash  record_spot_sensors.bash  visualize_ground_truth_trajectories.py
simple_image/: CMakeLists.txt  package.xml
simple_image/launch/: simple_image_node.launch.yaml
simple_image/src/: simple_image_node.cpp
spot_data_collect/: package.xml  setup.cfg  setup.py
tf_odom_convert/: package.xml  setup.cfg  setup.py
tf_odom_convert/tf_odom_convert/: odom_to_tf_node.py  tf_to_odom_node.py
(+601 files in other folders)
